falta mejorar el login y register

--- a/login/login.html
+++ b/login/login.html
@@ -15,7 +15,12 @@
           <span class="card-side"></span>
           <div class="flip-card__inner">
             <div class="flip-card__front">
-              <div class="title">Log in</div>
+              <img
+                src="../public/img/logoOficial.png"
+                alt="NuevoChimbote"
+                class="logo"
+              />
+              <div class="title">Inicia Sesión</div>
               <form action="login.php" method="POST" class="flip-card__form">
                 <input
                   type="text"
@@ -35,7 +40,12 @@
               </form>
             </div>
             <div class="flip-card__back">
-              <div class="title">Sign up</div>
+              <img
+                src="../public/img/logoOficial.png"
+                alt="NuevoChimbote"
+                class="logo"
+              />
+              <div class="title">Regístrate</div>
               <form action="register.php" method="POST" class="flip-card__form">
                 <input
                   type="text"
